@@ -141,6 +141,9 @@ Release 2.4.0 - UNRELEASED
     HDFS-6061. Allow dfs.datanode.shared.file.descriptor.path to contain
     multiple entries and fall back when needed (cmccabe)
 
+    HDFS-5986. Capture the number of blocks pending deletion on namenode webUI.
+    (cnauroth)
+
   OPTIMIZATIONS
 
     HDFS-5790. LeaseManager.findPath is very slow when many leases need recovery
